# geointent

./: .gitignore  Plan.md  README.md  TESTING.md  geointent.cursorrules  nlgeo.cursorrules  pyproject.toml
.cursor/rules/: geointent.mdc  nlgeo.mdc
.github/workflows/: workflow.yml
examples/: overture_duckdb.py  parcel_analysis.py  utility_network.py
geointent/: __init__.py  engine.py  schema.py  types.py  units.py
geointent/compiler/: __init__.py  intent.py
geointent/compiler/codegen/: __init__.py  duckdb.py  geojson.py  geopandas.py  postgis.py
geointent/compiler/resolver/: __init__.py  terms.py
geointent/llm/: __init__.py  prompt.py
geointent/llm/backends/: claude.py  mock.py  ollama.py  openai.py
nlgeo/: __init__.py  engine.py  schema.py  types.py
nlgeo/compiler/: intent.py
nlgeo/compiler/codegen/: duckdb.py  geojson.py  geopandas.py  postgis.py
nlgeo/compiler/resolver/: __init__.py  domains.py  terms.py
nlgeo/llm/: __init__.py  prompt.py
nlgeo/llm/backends/: claude.py  mock.py  ollama.py  openai.py
tests/: conftest.py  seed_db.py  test_claude_backend.py  test_codegen_duckdb.py  test_codegen_geojson.py  test_codegen_geopandas.py  test_codegen_postgis.py  test_engine_integration.py  test_engine_unit.py  test_ollama_backend.py  test_openai_backend.py  test_prompt.py  test_resolver.py  test_schema.py  test_schema_postgis.py  test_types_context.py  test_units.py
tests/fixtures/: seed_utility.sql
tests/realdata/: test_overture_duckdb.py
tests/snapshots/test_codegen_postgis/test_postgis_snapshot_dwithin/: postgis_dwithin_feet_50_manholes_gas.sql
(+2 files in other folders)
