[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "geoint"
version = "0.1.0"
description = "Natural language to spatial geometry — compiles NL to PostGIS, GeoPandas, GeoJSON, DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FultonGeo" }]
keywords = ["gis", "postgis", "nlp", "spatial", "sql"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.5",
  "anthropic>=0.18",
  "openai>=1.12",
  "httpx>=0.26",
  "shapely>=2.0",
  "pyproj>=3.6",
]

[project.optional-dependencies]
postgis = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
duckdb = ["duckdb>=0.10"]
geopandas = ["geopandas>=0.14"]
dev = [
  "pytest>=7.4",
  "pytest-snapshot>=0.9",
]

[project.urls]
Homepage = "https://github.com/FultonGeo/geointent"
Repository = "https://github.com/FultonGeo/geointent.git"
Issues = "https://github.com/FultonGeo/geointent/issues"

[tool.hatch.build.targets.wheel]
packages = ["nlgeo"]

[tool.pytest.ini_options]
markers = [
  "integration: PostGIS integration tests (local Docker)",
  "live: calls real LLM APIs",
  "realdata: network / DuckDB S3 tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
